<resources>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="mainGUI">Home</string>
    <string name="image">Upload Image</string>
    <string name="donateblood">Donate Blood</string>
    <string name="ContactDonor">Contact Donor</string>
    <string name="UserGuide">User Guide</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_id">1537284776579250</string>
    <string name="nearbyppl">Nearby People</string>
    <string name="SignUpLogo">SignUpLogo</string>
    <string name="LoginLogo">LoginLogo</string>
    <string-array name="blood_type">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="loginemail">Email</string>
    <string name="loginpassword">Password</string>
    <string name="loginbutton">Login</string>
    <string name="createaccount">Click here to SignUp</string>
    <string name="SignUpname">Name</string>
    <string name="SignUpemail">Email</string>
    <string name="SignUppassword">Password</string>
    <string name="SignUpage">Age</string>
    <string name="SignUpcontact_no">Contact No.</string>
    <string name="next_step">Next Step</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="topstartguilogo">TopStartGUILogo</string>
    <string name="downstartguilogo">DownStartGUIlogo</string>
    <string name="StartGUIlogin">Login</string>
    <string name="msgBack">Msg Back</string>
    <string name="callBack">Call Back</string>
    <string name="notavailable">Not Available now</string>
    <string name="unfit">Medically Unfit</string>
    <string name="StartGUIregister">Register</string>
    <string name="how_to_use">How to Use</string>
    <string name="select_blood_group">Blood Group Required?</string>
    <string name="distance_range">Distance Range</string>
    <string name="_0_km">0 km</string>
    <string name="find_people_near_by">Find people near by</string>
    <string name="singlelistitemphoto">SingleListItemPhoto</string>
    <string name="donor_name_here">Donor Name Here</string>
    <string name="requester_name_here">Requester Name Here</string>
    <string name="donor_age_here">Donor Age Here</string>
    <string name="donor_email_here">Donor Email Here</string>
    <string name="msgDonor">Msg</string>
    <string name="callDonor">Call</string>
    <string name="notifyDonor">Notify</string>
    <string name="verification_code">Verification Code</string>
    <string name="upload_image">Upload Image</string>
    <string name="uploadimagecameraimage">UploadImageCameraImage</string>
    <string name="proceed">Proceed</string>
    <string name="howtouse">
 \u2022 First register yourself using Register button providing sufficient details.\n
        \n\u2022 Use Login button to enter main interface of the application.\n
        \n\u2022 Select appropriate blood group you required.\n
        \n\u2022 Select range of distance you want to find donors in.\n
        \n\u2022 Use distance slider to know if donors are present in that range or not.\n
        \n\u2022 Click on Search People Nearby to see details of the donors available.\n
        \n\u2022 Use Msg Call and notify buttons to contact specific donors.\n
    </string>
</resources>
