<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingTop="36dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verification_code"
        android:id="@+id/code"
        android:layout_gravity="center_horizontal" />

    <Button
        style="?android:attr/buttonStyleSmall"

        android:text="@string/upload_image"
        android:id="@+id/upload"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"



        android:background="@drawable/nice_button"

        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:shadowRadius="1"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="@android:color/black"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:background="@drawable/cam"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/uploadimagecameraimage" />

    <Button

        android:text="@string/proceed"
        android:id="@+id/proceed"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"



        android:background="@drawable/nice_button"

        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:shadowRadius="1"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="@android:color/black"/>


</LinearLayout>