<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/donor_name_here"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="30dp" />
        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/image"
            android:adjustViewBounds="true"
            android:src="@drawable/abc"
            android:contentDescription="@string/singlelistitemphoto" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/select_blood_group"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">
        </android.support.v7.widget.AppCompatSpinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/distance_range"
            android:id="@+id/textVieww"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/_0_km"
            android:id="@+id/DistanceText"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

        <Button

            android:text="@string/find_people_near_by"
            android:id="@+id/findppl"
            android:layout_weight="0.06"
            android:layout_marginTop="50dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:background="@drawable/nice_button"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@android:color/black"/>

    </LinearLayout>
</ScrollView>