<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/image"
        android:adjustViewBounds="true"
        android:src="@drawable/abc"
        android:contentDescription="@string/singlelistitemphoto" />
    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/donor_name_here"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/donor_age_here"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/donor_email_here"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msgDonor"
            android:id="@+id/buttonMsg"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:width="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:background="@drawable/nice_button"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@android:color/black"
            android:layout_marginRight="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/callDonor"
            android:id="@+id/buttonCall"
            android:minHeight="0dp"
            android:minWidth="0dp"  android:width="80dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/nice_button"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@android:color/black"
            android:layout_marginLeft="5dp" />

        <Button
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/notifyDonor"
              android:id="@+id/buttonNotify"
              android:minHeight="0dp"
              android:minWidth="0dp"  android:width="80dp"
            android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp"
              android:padding="10dp"
              android:layout_gravity="center_horizontal"
              android:background="@drawable/nice_button"
              android:textColor="@android:color/white"
              android:textSize="15sp"
              android:shadowRadius="1"
              android:shadowDx="1"
              android:shadowDy="1"
              android:shadowColor="@android:color/black"
              android:layout_marginLeft="10dp" />
    </LinearLayout>


</LinearLayout>