<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_gravity="center_horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView android:src="@drawable/bloodlogo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/topstartguilogo" />
    <ImageView android:src="@drawable/logoabc"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/downstartguilogo" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/StartGUIlogin"
            android:id="@+id/btnlogin"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"

            android:background="@drawable/nice_button"

            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@android:color/black"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/StartGUIregister"
            android:id="@+id/btnregister"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/nice_button"

            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@android:color/black"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use"
            android:id="@+id/btnhowtouse"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/nice_button"

            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@android:color/black"/>

    </LinearLayout>

</ScrollView>