<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_gravity="center_horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/requester_name_here"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="30dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            android:maxWidth="100dp"

            android:layout_gravity="center_horizontal"
            android:id="@+id/requesterimage"
            android:adjustViewBounds="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/sad"
            android:contentDescription="@string/singlelistitemphoto" />




        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgBack"
            android:layout_marginTop="30dp"
            android:id="@+id/buttonMsg"
            android:layout_gravity="center_horizontal"

            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"

            android:background="@drawable/nice_button"

            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@android:color/black"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/callBack"
            android:id="@+id/buttonCall"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/nice_button"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@android:color/black"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unfit"
            android:id="@+id/unfit"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"

            android:background="@drawable/nice_button"

            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@android:color/black"/>


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notavailable"
            android:id="@+id/notavailable"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/nice_button"

            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@android:color/black"/>

    </LinearLayout>

</ScrollView>